objects/Value__c.object
<CustomObject>
    <fields>
        <fullName>Communication_Type__c</fullName>
        <label>Communication Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Setup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Setup</label>
        <referenceTo>Setup__c</referenceTo>
        <relationshipLabel>Values</relationshipLabel>
        <relationshipName>Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Text_Alert__c</fullName>
        <label>Text Alert</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Homework Alerts</fullName>
                </value>
                <value>
                    <fullName>Attendance Alerts</fullName>
                </value>
                <value>
                    <fullName>Attendance Threshold Alerts</fullName>
                </value>
                <value>
                    <fullName>Tardy Alerts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Value</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Values Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>